Added true up loop short circuit.
